Nouveau endpoint /api/users/:id (#5)
